modif partie claim , SecurityConfig et payement service